# BruteforceEngine

./: .gitignore  BruteforceEngine.cpp  BruteforceEngine.h  BruteforceEngine.sln  BruteforceEngine.vcxproj  BruteforceEngine.vcxproj.filters  BruteforceSettings.cpp  BruteforceSettings.hpp  CMakeLists.txt  ISettings.hpp  LICENSE  README.md  SettingName.hpp  Settings.cpp  Settings.hpp  conanfile.py  config.txt  configuration.json  cryptography.cpp  cryptography.h  log.txt  main.cpp  passwords_log.txt  plain_text.txt
src/: CMakeLists.txt  main.cpp
src/BruteforceEngine/: BruteforceEngine.cpp  BruteforceEngine.hpp  CMakeLists.txt  ConfigurationHandler.cpp  ConfigurationHandler.hpp  FileHandler.cpp  FileHandler.hpp  Logger.cpp  Logger.hpp  ProgressTracker.cpp  ProgressTracker.hpp  cryptography.cpp  cryptography.hpp
